fixed small image size on mobile

--- a/main.css
+++ b/main.css
@@ -32,6 +32,10 @@ a {
     cursor: pointer;
 }
 
+h1>a {
+    text-decoration: none;
+}
+
 .top {
     background-image: url("images/DC_offs_filter_02.JPG");
     height: 100%;
@@ -184,6 +188,10 @@ a {
 .product {
     background-color: var(--main);
     padding: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
 }
 
 .product-title {
@@ -230,6 +238,9 @@ a {
     }
     .product-image {
         width: 100%;
+    }
+    .product{
+        flex-direction: column;
     }
     .mobile-menu-button-background {
         visibility: visible;
